# chart_tui

./: .env.example  .gitignore  Cargo.toml  README.md  Schwab_streamer_api.txt
src/: app.rs  data.rs  feed.rs  input.rs  main.rs  perf.rs  render.rs
src/providers/: mod.rs  synthetic.rs
src/providers/schwab/: mod.rs  streamer.rs
