[package]
name = "chart_tui"
version = "0.1.0"
edition = "2021"
description = "High-speed multi-chart stock candlestick TUI prototype"
license = "MIT"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
crossbeam-channel = "0.5"
crossterm = "0.29"
flate2 = "1"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.13"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
url = "2"
